--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body {
-  background-color: #ff0000;
+  background-color: #DFDFDF;
   color: #0000FF;
+  font-size: 16px;
+  line-height: 2;
 }
 
 nav {
@@ -13,10 +15,12 @@ nav {
 .logo {
   margin: 20px;
   width: 100px;
+  image: url(images/bloc-logo.png);
 }
 
 .large-pic {
-  width: 100%;
+  image: url(/Users/rebeccabaror/css-exercise-two/images/instagram-pic.jpg
+  width: 100%);
 }
 
 .medium-pic {
@@ -35,15 +39,18 @@ nav {
 ul {
   list-style-type: none;
   float: right;
+  font-size: 1em;
 }
 
 li {
   float: right;
   padding: 30px;
+  font-size: 2em;
 }
 
 article {
   padding-top: 100px;
+  font-size: 1.5em;
 }
 
 .container {
